--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Scripts\DashTest\PlayerDashTest.cs" />
      <Compile Include="Assets\Scripts\DashTest\PlayerCameraTest.cs" />
      <Compile Include="Assets\movement.cs" />
+     <Compile Include="Assets\CameraFollow.cs" />
  <Reference Include="UnityEngine">
  <HintPath>C:/Program Files/Unity/Hub/Editor/2020.3.10f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
  </Reference>
